--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
         android:theme="@style/Theme.ComuCarona"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.app.comu_carona.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.ComuCarona">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
