--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanistPermissions = "0.28.0"
 agp = "8.6.1"
 kotlin = "1.9.0"
 coreKtx = "1.15.0"
@@ -25,6 +26,7 @@ ksp = "1.9.0-1.0.13"
 
 
 [libraries]
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 compose_ui_test_junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "compose_ui_test_junit4" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
