--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ accompanistPermissions = "0.28.0"
 accompanistSwiperefreshVersion = "0.32.0"
 agp = "8.6.1"
 coilCompose = "2.5.0"
+composeShimmer = "1.3.1"
 constraintlayoutCompose = "1.1.0"
 kotlin = "1.9.0"
 coreKtx = "1.15.0"
@@ -33,6 +34,7 @@ accompanist-permissions = { module = "com.google.accompanist:accompanist-permiss
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+compose-shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "composeShimmer" }
 compose_ui_test_junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "compose_ui_test_junit4" }
 google-accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefreshVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
